--- a/NBKotlinUI/build.gradle
+++ b/NBKotlinUI/build.gradle
@@ -61,7 +61,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-
+    //rx 相关的
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.15'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
     //side bar
     api 'com.timehop.stickyheadersrecyclerview:library:0.4.3@aar'
     api 'com.bigkoo:quicksidebar:1.0.3'
@@ -70,6 +75,13 @@ dependencies {
     implementation 'com.jph.takephoto:takephoto_library:4.0.3'
     implementation 'com.zhy:autolayout:1.4.5'
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
-    implementation 'com.github.nb312:KotlinCommonUtil:0.0.4'
+
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
+    implementation 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
+
+    implementation 'com.youth.banner:banner:1.4.10'
+    //https://github.com/sfsheng0322/MarqueeView 跑马灯
+    implementation 'com.sunfusheng:marqueeview:1.3.1'
 
 }
